Tried fixing the late response of JS
Tried fixing the late response of JS

--- a/styling_for_KH_website.css
+++ b/styling_for_KH_website.css
@@ -767,10 +767,10 @@ hr:after {
 
 @media only screen and (max-width: 600px) {
 
-    html {
+    /* html {
         position: relative;
         left: 10px;
-    }
+    } */
 
     /* ######################################## Header section for mobiles ########################################*/
     .show {
