--- a/styling_for_KH_website.css
+++ b/styling_for_KH_website.css
@@ -750,10 +750,10 @@ hr:after {
 
 @media only screen and (max-width: 600px) {
 
-    html {
+    /* html {
         position: relative;
         left: 8px;
-    }
+    } */
 
     /* ######################################## Header section for mobiles ########################################*/
     .show {
@@ -879,8 +879,6 @@ hr:after {
     /* ######################################## About Me Section for mobiles ######################################## */
     #aboutMeContainer {
         display: inline;
-        position: relative;
-        left: 5px;
     }
     #aboutMeContainerDpAndWriteup {
         width: 100%;
@@ -891,10 +889,6 @@ hr:after {
         align-items: center;
         margin-bottom: 25px;
         padding-bottom: 25px;
-        margin-left: 10px;
-        margin-right: 10px;
-        position: relative;
-        right: 5px;
     }
     #aboutMeContainerWriteup {
         display: flex;
