--- a/styling_for_KH_website.css
+++ b/styling_for_KH_website.css
@@ -252,7 +252,7 @@ a {
 
 .introHeroSkills {
     display: flex;
-    width: 90%;
+    /* width: 90%; */
 }
 
 /* NOTE: New hero section (Laptops) (29/12/24) */
@@ -293,7 +293,7 @@ nav {
 }
 
 .hero {
-    max-width: 50vw;
+    min-width: 640px;
     margin: 0;
 
     text-align: center;
@@ -356,6 +356,7 @@ nav {
     display: flex;
     justify-content: center;
     gap: 1rem;
+    margin-top: 0.9rem;
 }
 
 .btn {
@@ -389,15 +390,27 @@ nav {
 /* techStacksAndSkillsSection */
 
 .techStacksAndSkillsSection {
-    flex: 1;
-    margin: 0.5rem;
-    margin-top: 0px;
-    border-radius: 1rem;
-    background: var(--background-color);
+    height: fit-content;
+    width: 100vw;
+    /* text-align: center; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    
     color: var(--text-color);
     cursor: default;
-    padding: 1rem;
-    height: 600px;
+    padding: 0.5rem;
+}
+
+.tech-skills-section-container {
+    display: flex;
+    flex-direction: column;
+    background: var(--background-color);
+    width: fit-content;
+    padding: 0.7rem;
+    border-radius: 1rem;
 }
 
 .tech-skills-section {
@@ -455,6 +468,10 @@ nav {
     color: var(--text-color);
 }
 
+/* .cta-button {
+    
+} */
+
 /* For smaller screens (max-width: 600px) */
 @media only screen and (max-width: 600px) {
     .skills-grid {
@@ -464,6 +481,9 @@ nav {
 
     .tech-skills-section {
         max-width: 90vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .section-title {
@@ -471,11 +491,11 @@ nav {
     }
 
         .skill-card{
-            width: 120px;
+            width: 110px;
         }
 
     .skill-card h3 {
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
 
     .skill-card ul li {
@@ -507,10 +527,9 @@ nav {
         flex-direction: column;
     }
 
-    .hero,
-    .techStacksAndSkillsSection {
+    /* .hero {
         padding: 1rem;
-    }
+    } */
 }
 
 @media (max-width: 768px) {
@@ -627,7 +646,7 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 40px 0 40px;
+    /* margin: 40px 0 40px; */
     /* transform: scale(1.2); */
 }
 
@@ -717,7 +736,7 @@ hr:after {
 .experience-achievement-title {
     font-size: 2.5rem;
     font-weight: 700;
-    margin-bottom: 3rem;
+    /* margin-bottom: 3rem; */
     background: linear-gradient(to right, var(--text-color), var(--primary-color));
     -webkit-background-clip: text;
     background-clip: text;
@@ -991,6 +1010,7 @@ hr:after {
 #portfolioSection {
     display: flex;
     justify-content: center;
+    margin-bottom: 1.4rem;
 }
 
 .projects {
@@ -1380,12 +1400,9 @@ hr:after {
     margin: 10px;
     letter-spacing: 2px;
     line-height: 1.3;
-    text-align: justify;
+    text-align: center;
 }
 
-/* .contentInPara a {
-    color: aquamarine;
-} */
  /* Applied to all */
 
 #ulOfFrontendContent {
@@ -1566,8 +1583,10 @@ hr:after {
             flex-direction: column;
             width: 100%;
         }
+        
     .hero {
-        max-width: 100vw;
+        min-width: 300px;
+        margin: auto 0.5rem;
     }
     .heroTitle {
         font-size: 3rem;
@@ -1581,11 +1600,16 @@ hr:after {
     }
 
     .techStacksAndSkillsSection {
-        margin: 1rem;
+        width: 100%;
         padding: 0px;
-        padding-bottom: 10px;
     }
+    /* .tech-skills-section-container {
 
+    } */
+
+    .tech-skills-section {
+        padding: 0px 0.5rem;
+    }
 
 
     /* OLD */
@@ -1880,7 +1904,9 @@ hr:after {
     } */
 
     .contentInPara {
-        font-size: 0.6rem;
+        letter-spacing: 1px;
+        line-height: 1.1;
+        font-size: 0.8rem;
         padding: 0px;
     }
 
